--- a/libcpp/po/ChangeLog
+++ b/libcpp/po/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-04  Joseph Myers  <joseph@codesourcery.com>
+
+	* fi.po: Update.
+
 2017-01-03  Joseph Myers  <joseph@codesourcery.com>
 
 	* be.po, ca.po, da.po, de.po, el.po, eo.po, es.po, fi.po, fr.po,
