* doc/xml/manual/documentation_hacking.xml: sourceforge.net now         defaults to https; adjust reference.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244043 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-03  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* doc/xml/manual/documentation_hacking.xml: sourceforge.net now
+	defaults to https; adjust reference.
+
 2017-01-03  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/78956
