PR 78796 Modify testcases due to gfc_trans_string_copy change
As r244011 had to be reverted, this change adds back the testcase
changes that are needed due to r244003.

2017-01-04  Janne Blomqvist  <jb@gcc.gnu.org>

	PR fortran/78534
	PR fortran/78976
	* gfortran.dg/dependency_49.f90: Change scan-tree-dump-times
	due to gfc_trans_string_copy change to avoid -Wstringop-overflow.
	* gfortran.dg/transfer_intrinsic_1.f90: Change
	scan-tree-dump-times due to gfc_trans_string_copy change to
	avoid -Wstringop-overflow.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244048 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,13 @@
+2017-01-04  Janne Blomqvist  <jb@gcc.gnu.org>
+
+	PR fortran/78534
+	PR fortran/78976
+	* gfortran.dg/dependency_49.f90: Change scan-tree-dump-times
+	due to gfc_trans_string_copy change to avoid -Wstringop-overflow.
+	* gfortran.dg/transfer_intrinsic_1.f90: Change
+	scan-tree-dump-times due to gfc_trans_string_copy change to
+	avoid -Wstringop-overflow.
+
 2017-01-03  Jeff Law  <law@redhat.com>
 
 	PR tree-optimization/78856
