Update configure deps, remove stray \xA0 in picflag.m4, regenerate
Also fix a stray changelog entry.  Some of the regen here is due to
previous changes not being regenerated properly, in part due to the
missing configure dependencies.

	* configure: Regenerate.
config/
	* picflag.m4: Remove stray \xA0 in comment.
gcc/
	* Makefile.in (aclocal_deps): Update and order as per aclocal.m4.
	* configure: Regenerate.
	* config.in: Regenerate.
libada/
	* Makefile.in (configure_deps): Update and order as per
	configure.ac sinclude.
	* configure: Regenerate.
libgcc/
	* Makefile.in (configure_deps): Update.
	* configure: Regenerate.
libiberty/
	* Makefile.in (configure_deps): Update.
	* configure: Regenerate.
libitm/
	* Makefile.in: Regenerate.
	* testsuite/Makefile.in: Regenerate.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244049 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-04  Alan Modra  <amodra@gmail.com>
+
+	* configure: Regenerate.
+
 2016-12-29  Ben Elliston  <bje@gnu.org>
 
 	* config.sub: Import latest version.
@@ -18,8 +22,7 @@
 
 2016-12-01  Ma Jiang  <ma.jiang@zte.com.cn>
 
-	* config/acx.m4: Change "tail +16c" to "tail -c +17".
-	* configure: Regenerated.
+	* configure: Regenerate.
 
 2016-12-01  Matthias Klose  <doko@ubuntu.com>
 
