--- a/libada/ChangeLog
+++ b/libada/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-04  Alan Modra  <amodra@gmail.com>
+
+	* Makefile.in (configure_deps): Update and order as per
+	configure.ac sinclude.
+	* configure: Regenerate.
+
 2017-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
