--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-04  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/71563
+	* match.pd: Simplify X << Y into X if Y is known to be 0 or
+	out of range value - has low bits known to be zero.
+
 2017-01-04  Alan Modra  <amodra@gmail.com>
 
 	* Makefile.in (aclocal_deps): Update and order as per aclocal.m4.
