[DWARF] New DWARF operation "DW_OP_AARCH64_operation" for AArch64
include/
	* dwarf2.def (DW_OP_AARCH64_operation): Reserve the number 0xea.
	(DW_CFA_GNU_window_save): Comments the multiplexing on AArch64.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244055 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-04  Richard Earnshaw  <rearnsha@arm.com>
+	    Jiong Wang  <jiong.wang@arm.com>
+
+	* dwarf2.def (DW_OP_AARCH64_operation): Reserve the number 0xea.
+	(DW_CFA_GNU_window_save): Comments the multiplexing on AArch64.
+
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
