cp/ 	PR c++/66735 	* cp-tree.h (DECLTYPE_FOR_REF_CAPTURE): New. 	(lambda_capture_field_type): Update prototype. 	* lambda.c (lambda_capture_field_type): Add is_reference parm. 	Add referenceness here. 	(add_capture): Adjust lambda_capture_field_type call, refactor 	error checking. 	* pt.c (tsubst): Adjust lambda_capture_field_type call.
	testsuite/
	PR c++/66735
	* g++.dg/cpp1y/pr66735.C: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244056 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,14 @@
+2017-01-04  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/66735
+	* cp-tree.h (DECLTYPE_FOR_REF_CAPTURE): New.
+	(lambda_capture_field_type): Update prototype.
+	* lambda.c (lambda_capture_field_type): Add is_reference parm.
+	Add referenceness here.
+	(add_capture): Adjust lambda_capture_field_type call, refactor
+	error checking.
+	* pt.c (tsubst): Adjust lambda_capture_field_type call.
+
 2017-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
