--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-04  Uros Bizjak  <ubizjak@gmail.com>
+
+	* config/i386/i386.md (HI/SImode test with imm to QImode splitters):
+	Use gen_int_mode instead of gen_lopwart for const_int operands.
+
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/71563
