* update-copyright.py (GCCCmdLine): Add include, libcc1, libiberty, 	libssp, libvtv and lto-plugin to default_dirs.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244060 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* update-copyright.py (GCCCmdLine): Add include, libcc1, libiberty,
+	libssp, libvtv and lto-plugin to default_dirs.
+
 2017-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* update-copyright.py (TestsuiteFilter): Skip params/README.
