--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-04  David Malcolm  <dmalcolm@redhat.com>
+
+	* gcc.dg/Wmissing-braces-fixits.c: New test case.
+
 2017-01-04  Nathan Sidwell  <nathan@acm.org>
 
 	PR c++/66735
