PR c++/77545 	PR c++/77284 	* constexpr.c (potential_constant_expression_1): Handle CLEANUP_STMT.
	* g++.dg/cpp0x/range-for32.C: New test.
	* g++.dg/cpp0x/range-for33.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244062 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-04  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/77545
+	PR c++/77284
+	* g++.dg/cpp0x/range-for32.C: New test.
+	* g++.dg/cpp0x/range-for33.C: New test.
+
 2017-01-04  David Malcolm  <dmalcolm@redhat.com>
 
 	* gcc.dg/Wmissing-braces-fixits.c: New test case.
