gcc/testsuite/ChangeLog:
2017-01-04  Kelvin Nilsen  <kelvin@gcc.gnu.org>

	PR target/78056
	* gcc.target/powerpc/pr78056-1.c: New test.
	* gcc.target/powerpc/pr78056-2.c: New test.
	* gcc.target/powerpc/pr78056-3.c: New test.
	* gcc.target/powerpc/pr78056-4.c: New test.
	* gcc.target/powerpc/pr78056-5.c: New test.
	* gcc.target/powerpc/pr78056-6.c: New test.
	* gcc.target/powerpc/pr78056-7.c: New test.
	* gcc.target/powerpc/pr78056-8.c: New test.
	* lib/target-supports.exp
	(check_effective_target_powerpc_popcntb_ok): New procedure to test
	whether the effective target supports the popcntb instruction.

gcc/ChangeLog:

2017-01-04  Kelvin Nilsen  <kelvin@gcc.gnu.org>

	PR target/78056
	* doc/sourcebuild.texi (PowerPC-specific attributes): Add
	documentation of the powerpc_popcntb_ok attribute.
	* config/rs6000/rs6000.c (rs6000_option_override_internal): Add
	code to issue warning messages if a requested CPU configuration is
	not supported by the binary (assembler and loader) toolchain.
	(spe_init_builtins): Add two assertions to prevent ICE if attempt is
	made to define a built-in function that has been disabled.
	(paired_init_builtins): Add assertion to prevent ICE if attempt is
	made to define a built-in function that has been disabled.
	(altivec_init_builtins): Add comment explaining why definition
	of the DST built-in functions is not preceded by an assertion
	check.  Add assertions to prevent ICE if attempts are made to
	define an altivec predicate or an abs* built-in function that has
	been disabled.
	(htm_init_builtins): Add comment explaining why definition of the
	htm built-in functions is not preceded by an assertion check.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244068 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,23 @@
+2017-01-04  Kelvin Nilsen  <kelvin@gcc.gnu.org>
+
+	PR target/78056
+	* doc/sourcebuild.texi (PowerPC-specific attributes): Add
+	documentation of the powerpc_popcntb_ok attribute.
+	* config/rs6000/rs6000.c (rs6000_option_override_internal): Add
+	code to issue warning messages if a requested CPU configuration is
+	not supported by the binary (assembler and loader) toolchain.
+	(spe_init_builtins): Add two assertions to prevent ICE if attempt is
+	made to define a built-in function that has been disabled.
+	(paired_init_builtins): Add assertion to prevent ICE if attempt is
+	made to define a built-in function that has been disabled.
+	(altivec_init_builtins): Add comment explaining why definition
+	of the DST built-in functions is not preceded by an assertion
+	check.  Add assertions to prevent ICE if attempts are made to
+	define an altivec predicate or an abs* built-in function that has
+	been disabled.
+	(htm_init_builtins): Add comment explaining why definition of the
+	htm built-in functions is not preceded by an assertion check.
+
 2017-01-04  Jeff Law  <law@redhat.com>
 
 	PR tree-optimizatin/67955
