--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-04  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/71182
+	* g++.dg/cpp0x/pr71182.C: New test.
+
 2017-01-04  Kelvin Nilsen  <kelvin@gcc.gnu.org>
 
 	PR target/78056
