* parser.c (cp_parser_simple_declaration): Diagnose function 	declaration among more than one init-declarators with auto 	specifier.
	* g++.dg/cpp1y/auto-fn34.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244071 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
+	* g++.dg/cpp1y/auto-fn34.C: New test.
+
 	PR c++/71182
 	* g++.dg/cpp0x/pr71182.C: New test.
 
