PR driver/78957 	* c.opt (fsso-struct=): Add RejectNegative.
	* gcc.dg/pr78957.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244072 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-04  Jakub Jelinek  <jakub@redhat.com>
+
+	PR driver/78957
+	* c.opt (fsso-struct=): Add RejectNegative.
+
 2017-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
