--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
+	PR driver/78957
+	* gcc.dg/pr78957.c: New test.
+
 	* g++.dg/cpp1y/auto-fn34.C: New test.
 
 	PR c++/71182
