* optc-gen.awk: Emit #error for -W*/-f*/-m* Enum without 	RejectNegative.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244073 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
+	* optc-gen.awk: Emit #error for -W*/-f*/-m* Enum without
+	RejectNegative.
+
 	* dwarf2out.c (output_loc_list): Don't throw away 64K+ location
 	descriptions for -gdwarf-5 and emit them as uleb128 instead of
 	2-byte data.
