PR c++/78949 	* typeck.c (cp_build_unary_op): Call mark_rvalue_use on arg if it has 	vector type.
	* c-c++-common/Wunused-var-16.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244075 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/78949
+	* typeck.c (cp_build_unary_op): Call mark_rvalue_use on arg if it has
+	vector type.
+
 	PR c++/78693
 	* parser.c (cp_parser_simple_declaration): Only complain about
 	inconsistent auto deduction if auto_result doesn't use auto.
