--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/78949
+	* c-c++-common/Wunused-var-16.c: New test.
+
 	PR c++/78693
 	* g++.dg/cpp0x/pr78693.C: New test.
 
