--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-04  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/64767
+	* typeck.c (cp_build_binary_op): Warn when a pointer is compared with
+	a zero character literal.
+
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/78949
