* pt_BR.po, ru.po: Update.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244080 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libcpp/po/ChangeLog
+++ b/libcpp/po/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-05  Joseph Myers  <joseph@codesourcery.com>
+
+	* pt_BR.po, ru.po: Update.
+
 2017-01-04  Joseph Myers  <joseph@codesourcery.com>
 
 	* fi.po: Update.
