--- a/libcpp/po/ru.po
+++ b/libcpp/po/ru.po
@@ -2,13 +2,13 @@
 # Copyright (C) 2011 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gcc package.
 #
-# Yuri Kozlov <yuray@komyakino.ru>, 2011, 2012, 2013, 2014, 2015, 2016.
+# Yuri Kozlov <yuray@komyakino.ru>, 2011, 2012, 2013, 2014, 2015, 2016, 2017.
 msgid ""
 msgstr ""
-"Project-Id-Version: cpplib 6.1.0\n"
+"Project-Id-Version: cpplib 7.1-b20170101\n"
 "Report-Msgid-Bugs-To: http://gcc.gnu.org/bugs.html\n"
 "POT-Creation-Date: 2017-01-01 00:51+0000\n"
-"PO-Revision-Date: 2016-04-27 19:03+0300\n"
+"PO-Revision-Date: 2017-01-04 09:30+0300\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <gnu@d07.ru>\n"
 "Language: ru\n"
@@ -137,7 +137,7 @@ msgstr "преобразование экранированной последо
 
 #: charset.c:1614
 msgid "missing open quote"
-msgstr ""
+msgstr "отсутствует открывающая кавычка"
 
 #: charset.c:1827 charset.c:1891
 msgid "character constant too long for its type"
@@ -532,10 +532,9 @@ msgid "imaginary number in preprocessor expression"
 msgstr "мнимое число в препроцессорном выражении"
 
 #: expr.c:1162
-#, fuzzy, c-format
-#| msgid "\"%s\" is not defined"
+#, c-format
 msgid "\"%s\" is not defined, evaluates to 0"
-msgstr "«%s» не определена"
+msgstr "«%s» не определена, оценивается как 0"
 
 #: expr.c:1175
 msgid "assertions are a GCC extension"
